WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
226958
[watchOS] Quickboard UI for focused select elements should not allow the user to change the input language
https://bugs.webkit.org/show_bug.cgi?id=226958
Summary
[watchOS] Quickboard UI for focused select elements should not allow the user...
Wenson Hsieh
Reported
2021-06-13 15:43:39 PDT
There's no point to showing this UI for single/multiple select elements.
Attachments
For EWS
(6.55 KB, patch)
2021-06-13 16:37 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2021-06-13 16:37:53 PDT
Created
attachment 431295
[details]
For EWS
Wenson Hsieh
Comment 2
2021-06-13 18:18:49 PDT
Comment on
attachment 431295
[details]
For EWS Thanks for the review!
EWS
Comment 3
2021-06-13 18:23:06 PDT
Committed
r278823
(
238776@main
): <
https://commits.webkit.org/238776@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 431295
[details]
.
Radar WebKit Bug Importer
Comment 4
2021-06-13 18:24:17 PDT
<
rdar://problem/79269752
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug